HW4-keyvan-dadashzadeh-97522148/Q3/gen/Q3Parser.py
# Generated from Q3.g4 by ANTLR 4.9
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class Q3Parser ( Parser ):

    grammarFileName = "Q3.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'System.out.println'", "'length'", "<INVALID>", 
                     "'{'", "'}'", "'('", "')'", "'['", "']'", "'boolean'", 
                     "'int'", "'String'", "'void'", "'class'", "'extends'", 
                     "'main'", "'public'", "'static'", "'return'", "'while'", 
                     "'if'", "'else'", "'='", "<INVALID>", "'!'", "';'", 
                     "'.'", "','", "'true'", "'false'", "'this'", "'new'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "INTEGER_LITERAL", 
            "LBrace", "RBrace", "LPran", "RPran", "LBrack", "RBrack", 
            "BooleanType", "IntegerType", "StringType", "VoidType", 
            "ClassSmt", "ExtendsSmt", "MainSmt", "PublicSmt", 
            "StaticSmt", "ReturnSmt", "WhileSmt", "IfSmt", "ElseSmt", 
            "Equals", "Operations", "Exclamation", "SemiColon", 
            "Dot", "Comma", "TRUE", "FALSE", "This", "New", "IDENTIFIER", 
            "Whitespace", "BlockComment", "LineComment", "Newline" ]

    RULE_program = 0
    RULE_mainClass = 1
    RULE_mainDefinition = 2
    RULE_classDeclaration = 3
    RULE_methodDeclaration = 4
    RULE_methodName = 5
    RULE_methodDefinition = 6
    RULE_varDeclaration = 7
    RULE_methodParam = 8
    RULE_type = 9
    RULE_statement = 10
    RULE_expression = 11
    RULE_functionParams = 12
    RULE_identifier = 13

    ruleNames =  [ "program", "mainClass", "mainDefinition", "classDeclaration", 
                   "methodDeclaration", "methodName", "methodDefinition", 
                   "varDeclaration", "methodParam", "type", "statement", 
                   "expression", "functionParams", "identifier" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    INTEGER_LITERAL=3
    LBrace=4
    RBrace=5
    LPran=6
    RPran=7
    LBrack=8
    RBrack=9
    BooleanType=10
    IntegerType=11
    StringType=12
    VoidType=13
    ClassSmt=14
    ExtendsSmt=15
    MainSmt=16
    PublicSmt=17
    StaticSmt=18
    ReturnSmt=19
    WhileSmt=20
    IfSmt=21
    ElseSmt=22
    Equals=23
    Operations=24
    Exclamation=25
    SemiColon=26
    Dot=27
    Comma=28
    TRUE=29
    FALSE=30
    This=31
    New=32
    IDENTIFIER=33
    Whitespace=34
    BlockComment=35
    LineComment=36
    Newline=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None


     
    var_dict = {}
    temp_counter = 0
    label_counter = 0
    params = 0
    current_function_params = 0


    method_body = ""

    def define_variable(self, type, name):
        if name not in self.var_dict:
            self.var_dict[name] = type

    def create_temp(self):
        new_temp = f"_t{self.temp_counter}"
        self.temp_counter += 1
        self.current_function_params += 1
        return new_temp

    def create_label(self):
        new_label = f"L{self.label_counter}"
        self.label_counter += 1
        return new_label

    def add_to_method_body(self, text):
        self.method_body += text + "\n"

    def get_method_body(self):
        return self.method_body

    def clear_method_body(self):
        self.method_body = ""



    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def mainClass(self):
            return self.getTypedRuleContext(Q3Parser.MainClassContext,0)


        def EOF(self):
            return self.getToken(Q3Parser.EOF, 0)

        def classDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.ClassDeclarationContext)
            else:
                return self.getTypedRuleContext(Q3Parser.ClassDeclarationContext,i)


        def getRuleIndex(self):
            return Q3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = Q3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 28
            self.mainClass()
            self.state = 32
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Q3Parser.ClassSmt:
                self.state = 29
                self.classDeclaration()
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 35
            self.match(Q3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainClassContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ClassSmt(self):
            return self.getToken(Q3Parser.ClassSmt, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Q3Parser.IdentifierContext,i)


        def LBrace(self):
            return self.getToken(Q3Parser.LBrace, 0)

        def PublicSmt(self):
            return self.getToken(Q3Parser.PublicSmt, 0)

        def StaticSmt(self):
            return self.getToken(Q3Parser.StaticSmt, 0)

        def VoidType(self):
            return self.getToken(Q3Parser.VoidType, 0)

        def MainSmt(self):
            return self.getToken(Q3Parser.MainSmt, 0)

        def LPran(self):
            return self.getToken(Q3Parser.LPran, 0)

        def StringType(self):
            return self.getToken(Q3Parser.StringType, 0)

        def LBrack(self):
            return self.getToken(Q3Parser.LBrack, 0)

        def RBrack(self):
            return self.getToken(Q3Parser.RBrack, 0)

        def RPran(self):
            return self.getToken(Q3Parser.RPran, 0)

        def mainDefinition(self):
            return self.getTypedRuleContext(Q3Parser.MainDefinitionContext,0)


        def getRuleIndex(self):
            return Q3Parser.RULE_mainClass

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainClass" ):
                listener.enterMainClass(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainClass" ):
                listener.exitMainClass(self)




    def mainClass(self):

        localctx = Q3Parser.MainClassContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_mainClass)
        try:
            self.enterOuterAlt(localctx, 1)

            print("main:")
            self.params = 0
            self.current_function_params = 0

            self.state = 38
            self.match(Q3Parser.ClassSmt)
            self.state = 39
            self.identifier()
            self.state = 40
            self.match(Q3Parser.LBrace)
            self.state = 41
            self.match(Q3Parser.PublicSmt)
            self.state = 42
            self.match(Q3Parser.StaticSmt)
            self.state = 43
            self.match(Q3Parser.VoidType)
            self.state = 44
            self.match(Q3Parser.MainSmt)
            self.state = 45
            self.match(Q3Parser.LPran)
            self.state = 46
            self.match(Q3Parser.StringType)
            self.state = 47
            self.match(Q3Parser.LBrack)
            self.state = 48
            self.match(Q3Parser.RBrack)
            self.state = 49
            self.identifier()
            self.state = 50
            self.match(Q3Parser.RPran)
            self.state = 51
            self.mainDefinition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MainDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBrace(self):
            return self.getToken(Q3Parser.LBrace, 0)

        def statement(self):
            return self.getTypedRuleContext(Q3Parser.StatementContext,0)


        def RBrace(self, i:int=None):
            if i is None:
                return self.getTokens(Q3Parser.RBrace)
            else:
                return self.getToken(Q3Parser.RBrace, i)

        def getRuleIndex(self):
            return Q3Parser.RULE_mainDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMainDefinition" ):
                listener.enterMainDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMainDefinition" ):
                listener.exitMainDefinition(self)




    def mainDefinition(self):

        localctx = Q3Parser.MainDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_mainDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self.match(Q3Parser.LBrace)
            self.state = 54
            self.statement()
            self.state = 55
            self.match(Q3Parser.RBrace)
            self.state = 56
            self.match(Q3Parser.RBrace)

            print(f"\tBeginFunc {self.current_function_params * 4}")
            print(self.get_method_body())
            self.clear_method_body()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ClassSmt(self):
            return self.getToken(Q3Parser.ClassSmt, 0)

        def identifier(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.IdentifierContext)
            else:
                return self.getTypedRuleContext(Q3Parser.IdentifierContext,i)


        def LBrace(self):
            return self.getToken(Q3Parser.LBrace, 0)

        def RBrace(self):
            return self.getToken(Q3Parser.RBrace, 0)

        def ExtendsSmt(self):
            return self.getToken(Q3Parser.ExtendsSmt, 0)

        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Q3Parser.VarDeclarationContext,i)


        def methodDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.MethodDeclarationContext)
            else:
                return self.getTypedRuleContext(Q3Parser.MethodDeclarationContext,i)


        def getRuleIndex(self):
            return Q3Parser.RULE_classDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDeclaration" ):
                listener.enterClassDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDeclaration" ):
                listener.exitClassDeclaration(self)




    def classDeclaration(self):

        localctx = Q3Parser.ClassDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_classDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(Q3Parser.ClassSmt)
            self.state = 60
            self.identifier()
            self.state = 63
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==Q3Parser.ExtendsSmt:
                self.state = 61
                self.match(Q3Parser.ExtendsSmt)
                self.state = 62
                self.identifier()


            self.state = 65
            self.match(Q3Parser.LBrace)
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q3Parser.BooleanType) | (1 << Q3Parser.IntegerType) | (1 << Q3Parser.IDENTIFIER))) != 0):
                self.state = 66
                self.varDeclaration()
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==Q3Parser.PublicSmt:
                self.state = 72
                self.methodDeclaration()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(Q3Parser.RBrace)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodName(self):
            return self.getTypedRuleContext(Q3Parser.MethodNameContext,0)


        def LPran(self):
            return self.getToken(Q3Parser.LPran, 0)

        def RPran(self):
            return self.getToken(Q3Parser.RPran, 0)

        def methodDefinition(self):
            return self.getTypedRuleContext(Q3Parser.MethodDefinitionContext,0)


        def methodParam(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.MethodParamContext)
            else:
                return self.getTypedRuleContext(Q3Parser.MethodParamContext,i)


        def Comma(self, i:int=None):
            if i is None:
                return self.getTokens(Q3Parser.Comma)
            else:
                return self.getToken(Q3Parser.Comma, i)

        def getRuleIndex(self):
            return Q3Parser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)




    def methodDeclaration(self):

        localctx = Q3Parser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)

            self.params = 0
            self.current_function_params = 0

            self.state = 81
            self.methodName()
            self.state = 82
            self.match(Q3Parser.LPran)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q3Parser.BooleanType) | (1 << Q3Parser.IntegerType) | (1 << Q3Parser.IDENTIFIER))) != 0):
                self.state = 83
                self.methodParam()
                self.state = 88
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==Q3Parser.Comma:
                    self.state = 84
                    self.match(Q3Parser.Comma)
                    self.state = 85
                    self.methodParam()
                    self.state = 90
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



            self.state = 93
            self.match(Q3Parser.RPran)
            self.state = 94
            self.methodDefinition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodNameContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.methodType = None # TypeContext
            self.methodID = None # IdentifierContext

        def PublicSmt(self):
            return self.getToken(Q3Parser.PublicSmt, 0)

        def type(self):
            return self.getTypedRuleContext(Q3Parser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(Q3Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Q3Parser.RULE_methodName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodName" ):
                listener.enterMethodName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodName" ):
                listener.exitMethodName(self)




    def methodName(self):

        localctx = Q3Parser.MethodNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_methodName)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(Q3Parser.PublicSmt)
            self.state = 97
            localctx.methodType = self.type()
            self.state = 98
            localctx.methodID = self.identifier()

            print(f"{(None if localctx.methodID is None else self._input.getText(localctx.methodID.start,localctx.methodID.stop))}:")

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.first = None # ExpressionContext

        def LBrace(self):
            return self.getToken(Q3Parser.LBrace, 0)

        def ReturnSmt(self):
            return self.getToken(Q3Parser.ReturnSmt, 0)

        def SemiColon(self):
            return self.getToken(Q3Parser.SemiColon, 0)

        def RBrace(self):
            return self.getToken(Q3Parser.RBrace, 0)

        def expression(self):
            return self.getTypedRuleContext(Q3Parser.ExpressionContext,0)


        def varDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.VarDeclarationContext)
            else:
                return self.getTypedRuleContext(Q3Parser.VarDeclarationContext,i)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Q3Parser.StatementContext)
            else:
                return self.getTypedRuleContext(Q3Parser.StatementContext,i)


        def getRuleIndex(self):
            return Q3Parser.RULE_methodDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDefinition" ):
                listener.enterMethodDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDefinition" ):
                listener.exitMethodDefinition(self)




    def methodDefinition(self):

        localctx = Q3Parser.MethodDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_methodDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(Q3Parser.LBrace)
            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 102
                    self.varDeclaration() 
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << Q3Parser.T__0) | (1 << Q3Parser.LBrace) | (1 << Q3Parser.WhileSmt) | (1 << Q3Parser.IfSmt) | (1 << Q3Parser.IDENTIFIER))) != 0):
                self.state = 108
                self.statement()
                self.state = 113
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 114
            self.match(Q3Parser.ReturnSmt)
            self.state = 115
            localctx.first = self.expression(0)
            self.state = 116
            self.match(Q3Parser.SemiColon)
            self.state = 117
            self.match(Q3Parser.RBrace)

            print(f"\tBeginFunc {self.current_function_params * 4}")
            print(self.get_method_body())
            print(f"\tretrun {localctx.first.value_attr}")
            self.clear_method_body()

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.varType = None # TypeContext
            self.varID = None # IdentifierContext

        def SemiColon(self):
            return self.getToken(Q3Parser.SemiColon, 0)

        def type(self):
            return self.getTypedRuleContext(Q3Parser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(Q3Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Q3Parser.RULE_varDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDeclaration" ):
                listener.enterVarDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDeclaration" ):
                listener.exitVarDeclaration(self)




    def varDeclaration(self):

        localctx = Q3Parser.VarDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_varDeclaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            localctx.varType = self.type()
            self.state = 121
            localctx.varID = self.identifier()
            self.state = 122
            self.match(Q3Parser.SemiColon)

            self.define_variable((None if localctx.varType is None else self._input.getText(localctx.varType.start,localctx.varType.stop)), (None if localctx.varID is None else self._input.getText(localctx.varID.start,localctx.varID.stop)))
            self.current_function_params += 1

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodParamContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.paramType = None # TypeContext
            self.paramID = None # IdentifierContext

        def type(self):
            return self.getTypedRuleContext(Q3Parser.TypeContext,0)


        def identifier(self):
            return self.getTypedRuleContext(Q3Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Q3Parser.RULE_methodParam

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodParam" ):
                listener.enterMethodParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodParam" ):
                listener.exitMethodParam(self)




    def methodParam(self):

        localctx = Q3Parser.MethodParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_methodParam)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            localctx.paramType = self.type()
            self.state = 126
            localctx.paramID = self.identifier()

            self.define_variable((None if localctx.paramType is None else self._input.getText(localctx.paramType.start,localctx.paramType.stop)), (None if localctx.paramID is None else self._input.getText(localctx.paramID.start,localctx.paramID.stop)))

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IntegerType(self):
            return self.getToken(Q3Parser.IntegerType, 0)

        def LBrack(self):
            return self.getToken(Q3Parser.LBrack, 0)

        def RBrack(self):
            return self.getToken(Q3Parser.RBrack, 0)

        def BooleanType(self):
            return self.getToken(Q3Parser.BooleanType, 0)

        def identifier(self):
            return self.getTypedRuleContext(Q3Parser.IdentifierContext,0)


        def getRuleIndex(self):
            return Q3Parser.RULE_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterType" ):
                listener.enterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitType" ):
                listener.exitType(self)




    def type(self):

        localctx = Q3Parser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_type)
        try:
            self.state = 135
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.match(Q3Parser.IntegerType)
                self.state = 130
                self.match(Q3Parser.LBrack)
                self.state = 131
                self.match(Q3Parser.RBrack)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 132
                self.match(Q3Parser.BooleanType)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 133
                self.match(Q3Parser.IntegerType)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 134
                self.identifier()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.value_attr = str()
            self.type_attr = str()
            self.first = None # ExpressionContext
            self.first_s = None # StatementContext
            self.second_s = None # StatementContext
            self.varID = None # IdentifierContext
            self.varEXP = None # ExpressionContext
            self.eqEXP = None # ExpressionContext
